feat(nbt-editor): rebuild the NBT editor as criterion cards, cut for 1.20.1 item NBT
Ports the card-based NBT editor from the neoforge branch: only the criteria
that are set are shown, one card each, new ones come from a picker or are
read off an item in the inventory, and the value field follows the shape the
property needs.

The model underneath is re-cut for 1.20.1. There are no data components
here: an item's tag is its data and NbtMatcher reads it as it is, so a
property is named by its path in that tag (RepairCost, display.Name,
display.Lore) and written as nested keys. Name and lore lines are stored the
way an anvil stores them, as serialised text components, and shown without
that wrapping. The keys the 1.21 editor flags as legacy are real data on
this version and load as properties. The codec probing behind "what does
this component look like" has nothing to probe here; a value is only ever
read off an item that has one.